# AutoRestore

./: .gitignore  README.md  experiments.py  pyproject.toml  run.py
config/: __init__.py  base.yaml  exp.yaml  experiments.yaml  general.py  logging.py  run_config.py
demo/artefacts/: IQA.json  batch_IQA.json  batch_pipeline.json  inference_speed.json  state.json  verify_IQA.json
eval/: add_single_degradation.py  degradations.txt  synthesize.py
eval/ablation_exp/d3/: dark_defocus_blur_jpeg compression_artifact__lambda_0.json  dark_defocus_blur_jpeg compression_artifact__lambda_0_3.json  dark_defocus_blur_jpeg compression_artifact__lambda_0_5.json  dark_defocus_blur_jpeg compression_artifact__lambda_0_7.json  generate_markdown_tables.py  haze_motion_blur_low_resolution__lambda_0.json  haze_motion_blur_low_resolution__lambda_0_3.json  haze_motion_blur_low_resolution__lambda_0_5.json  haze_motion_blur_low_resolution__lambda_0_7.json  rain_noise_low_resolution__lambda_0.json  (+8 more)
ext/: deploy_depictqa.sh
ext/custom_depictqa_scripts/: app_comp.py  app_eval.py  config_comp.yaml  config_eval.yaml
ext/tune_depictqa/: add_single_degradation.py  build_meta.py  config_train.yaml  synthesize_lq.py  train.sh
src/api/: ViT.py  __init__.py  quality_api.py  qwen.py  qwen_image_edit.py
src/autorestore/: IQA.py  executor.py  metrics.py  planner.py  preprocess.py  verifier.py
src/prompts/: depictqa_eval_replan.md  qwen_preprocessor_executor.md  qwen_preprocessor_planner.md
src/utils/: file.py  image_processing.py
tests/: eval_depictqa.py  hf_qwen_image.py  test_logging.py
(+43 files in other folders)
